--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "georanker-mcp",
-  "version": "1.5.2",
-  "description": "GeoRanker Model‑Context‑Protocol server (MCP)",
+  "version": "1.5.20",
+  "description": "GeoRanker Model-Context-Protocol server (MCP)",
   "type": "module",
   "bin": {
-    "georanker-mcp": "dist/index.js"
+    "georanker-mcp": "dist/index.cjs"
   },
   "scripts": {
-    "build": "esbuild index.js --platform=node --bundle --outfile=dist/index.js",
-    "start": "node dist/index.js",
+    "build": "esbuild index.js --platform=node --format=cjs --bundle --banner:js=\"#!/usr/bin/env node\" --outfile=dist/index.cjs",
+    "start": "node dist/index.cjs",
     "dev": "node index.js --verbose"
   },
   "dependencies": {
