--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "georanker-mcp",
-  "version": "1.5.20",
-  "description": "GeoRanker Model-Context-Protocol server (MCP)",
+  "version": "1.5.22",
+  "description": "GeoRanker Model‑Context‑Protocol server (MCP)",
   "type": "module",
-  "bin": {
-    "georanker-mcp": "dist/index.cjs"
-  },
+  "bin": { "georanker-mcp": "dist/index.cjs" },
   "scripts": {
     "build": "esbuild index.js --platform=node --format=cjs --bundle --banner:js=\"#!/usr/bin/env node\" --outfile=dist/index.cjs",
     "start": "node dist/index.cjs",
@@ -17,25 +15,11 @@
     "axios": "^1.6.0",
     "axios-retry": "^3.8.0",
     "dotenv": "^16.3.0",
-    "p-limit": "^4.0.0",
-    "zod": "^3.22.0"
+    "p-limit": "^4.0.0"
   },
-  "devDependencies": {
-    "esbuild": "^0.19.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "georanker",
-    "mcp",
-    "scraping",
-    "serp",
-    "keywords"
-  ],
+  "devDependencies": { "esbuild": "^0.19.0" },
+  "engines": { "node": ">=18.0.0" },
+  "keywords": ["georanker", "mcp", "serp", "keywords"],
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lucas111112/georanker-mcp.git"
-  }
+  "repository": { "type": "git", "url": "git+https://github.com/lucas111112/georanker-mcp.git" }
 }
